<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:id="@+id/grp_actions">
        <item
            android:id="@+id/nav_startStopMatch"
            android:icon="@drawable/ic_baseline_play_circle_outline"
            android:title="@string/btn_startMatch" />
        <item
            android:id="@+id/nav_changeServer"
            android:icon="@drawable/ic_tennis_serve"
            android:title="@string/btn_change_server" />
        <item
            android:id="@+id/nav_changeEnds"
            android:icon="@drawable/ic_baseline_import_export"
            android:title="@string/btn_change_ends" />
        <item
            android:id="@+id/nav_changeStarter"
            android:icon="@drawable/ic_tennis_serve"
            android:visible="false"
            android:title="@string/btn_change_starter" />
        <item
            android:id="@+id/nav_undoLastPoint"
            android:icon="@drawable/ic_baseline_undo"
            android:title="@string/btn_undo" />
        <item
            android:id="@+id/nav_matchSettings"
            android:icon="@drawable/ic_baseline_settings"
            android:title="@string/btn_matchSettings" />
    </group>

    <group android:id="@+id/grp_settings">
        <item
            android:id="@+id/nav_lock"
            android:icon="@drawable/ic_baseline_lock_open"
            android:title="@string/btn_lock" />
        <item
            android:id="@+id/nav_mediaController"
            android:icon="@drawable/ic_baseline_settings_remote"
            android:title="@string/menu_mediaControllerSetup" />
        <item
            android:id="@+id/nav_broadcastMatch"
            app:actionProviderClass="uk.co.darkerwaters.scorepal.activities.handlers.ControllerSettingsHandler"
            android:icon="@drawable/ic_baseline_bluetooth_searching"
            android:checked="false"
            android:title="@string/menu_broadcastMatch" />
    </group>

    <group android:id="@+id/grp_main_settings">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_baseline_settings"
            android:title="@string/menu_settings" />
    </group>

    <item android:title="@string/btn_groupSounds">
        <menu>
            <item
                android:id="@+id/nav_mediavolume"
                android:checked="false"
                android:icon="@drawable/ic_baseline_volume_down"
                app:actionProviderClass="uk.co.darkerwaters.scorepal.activities.handlers.ControllerSliderHandler"
                app:showAsAction="always|collapseActionView"
                android:title="@string/mediaVolume_short"/>
            <item
                android:id="@+id/nav_soundBeeps"
                android:icon="@drawable/ic_baseline_volume_up"
                android:title="@string/btn_sounds" />
            <item
                android:id="@+id/nav_soundActions"
                android:icon="@drawable/ic_baseline_volume_up"
                android:title="@string/btn_soundActions" />
            <item
                android:id="@+id/nav_soundPoints"
                android:icon="@drawable/ic_baseline_volume_up"
                android:title="@string/btn_points" />
            <item
                android:id="@+id/nav_soundMessages"
                android:icon="@drawable/ic_baseline_volume_up"
                android:title="@string/btn_messages" />
        </menu>
    </item>

</menu>
