<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group>
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_tennis_serve"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_opponent_stats"
            android:icon="@drawable/ic_baseline_pie_chart"
            android:title="@string/menu_opponent_history" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_baseline_history"
            android:title="@string/menu_history" />
        <item
            android:id="@+id/nav_mediaController"
            android:icon="@drawable/ic_baseline_settings_remote"
            android:title="@string/menu_mediaControllerSetup" />
        <item
            android:id="@+id/nav_broadcastMatch"
            android:icon="@drawable/ic_baseline_settings_input_antenna"
            android:title="@string/menu_broadcastMatchSetup"/>
    </group>

    <item android:title="@string/administration">
        <menu>
            <item
                android:id="@+id/nav_import"
                android:icon="@drawable/ic_baseline_input"
                android:title="@string/menu_import"
                android:visible="true" />
            <item
                android:id="@+id/nav_export"
                android:icon="@drawable/ic_baseline_import_export"
                android:title="@string/menu_export"
                android:visible="false" />
            <item
                android:id="@+id/nav_trash"
                android:icon="@drawable/ic_baseline_delete"
                android:title="@string/menu_trash" />
            <item
                android:id="@+id/nav_attributions"
                android:icon="@drawable/ic_menu_gallery"
                android:title="@string/menu_attributions" />
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_baseline_settings"
                android:title="@string/menu_settings" />
        </menu>
    </item>

</menu>
