<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="8dp">

    <TextView
        android:id="@+id/textViewTeamOne"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:ellipsize="marquee"
        android:freezesText="true"
        android:marqueeRepeatLimit="marquee_forever"
        android:maxWidth="120dp"
        android:paddingLeft="5dip"
        android:paddingRight="5dip"
        android:scrollHorizontally="true"
        android:singleLine="true"
        android:text="@string/team_one_title"
        android:textAlignment="textEnd"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toBottomOf="@+id/teamOne_Points"
        app:layout_constraintEnd_toStartOf="@+id/teamOne_Points"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/teamOne_Points" />

    <uk.co.darkerwaters.scorepal.activities.fragments.ResizeTextView
        android:id="@+id/teamOne_Points"
        android:layout_width="50dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorPrimaryDark"
        android:gravity="center"
        app:layout_constraintDimensionRatio="H,1:1"
        app:layout_constraintEnd_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewTeamTwo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="8dp"
        android:ellipsize="marquee"
        android:freezesText="true"
        android:marqueeRepeatLimit="marquee_forever"
        android:maxWidth="120dp"
        android:paddingLeft="5dip"
        android:paddingRight="5dip"
        android:scrollHorizontally="true"
        android:singleLine="true"
        android:text="@string/team_two_title"
        android:textAlignment="viewStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toBottomOf="@+id/teamTwo_Points"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/teamTwo_Points"
        app:layout_constraintTop_toTopOf="@+id/teamTwo_Points" />

    <uk.co.darkerwaters.scorepal.activities.fragments.ResizeTextView
        android:id="@+id/teamTwo_Points"
        android:layout_width="50dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorPrimaryDark"
        android:gravity="center"
        app:layout_constraintDimensionRatio="H,1:1"
        app:layout_constraintStart_toEndOf="@+id/view"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/servingImageView"
        android:layout_width="10dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/server"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="@+id/teamOne_Points"
        app:layout_constraintEnd_toStartOf="@+id/teamOne_Points"
        app:layout_constraintTop_toTopOf="@+id/teamOne_Points"
        app:srcCompat="@drawable/ic_baseline_arrow_back" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/moreLessLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/teamTwo_Points">


        <Button
            android:id="@+id/deleteButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimaryDark"
            android:drawableStart="@drawable/ic_baseline_delete"
            android:text="@string/btn_delete"
            android:textColor="@color/primaryTextColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/shareButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/colorPrimaryDark"
            android:drawableStart="@android:drawable/ic_menu_share"
            android:text="@string/btn_share"
            android:textColor="@color/primaryTextColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/hideButton"
            app:layout_constraintTop_toBottomOf="@+id/hideButton" />

        <Button
            android:id="@+id/hideButton"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginEnd="8dp"
            android:backgroundTint="@color/colorPrimaryDark"
            android:drawableStart="@drawable/ic_baseline_history"
            android:text="@string/btn_hide"
            android:textColor="@color/primaryTextColor"
            app:layout_constraintBottom_toBottomOf="@+id/deleteButton"
            app:layout_constraintEnd_toStartOf="@+id/deleteButton"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/moreLessButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimaryDark"
            android:drawableEnd="@drawable/ic_baseline_keyboard_arrow_right"
            android:text="@string/btn_more"
            android:textColor="@color/primaryTextColor"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>

    <View
        android:id="@+id/view"
        android:layout_width="8dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>